changes for network

--- a/Backend/Keycloak/Dockerfile
+++ b/Backend/Keycloak/Dockerfile
@@ -26,4 +26,5 @@ ENV KC_DB_URL=jdbc:postgresql://postgres:5432/keycloakdb
 ENV KC_DB_USERNAME: ${POSTGRES_USER}
 ENV KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
 ENV KC_HOSTNAME=localhost
+ENV KEYCLOAK_REALM_ADMIN_PASSWORD=${KEYCLOAK_REALM_ADMIN_PASSWORD}
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
