--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -26,26 +26,31 @@ services:
       - "8080:8080"
     command: ["start-dev"]
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com  # Admin email for pgAdmin
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}       # Admin password for pgAdmin
-    ports:
-      - "8081:80"                             # Access pgAdmin on port 8081
-    depends_on:
-      - postgres
-
-  # myservice:
-  #   build:
-  #     context: ./myservice
-  #     dockerfile: Dockerfile  # Path to your service's Dockerfile
+  # pgadmin:
+  #   image: dpage/pgadmin4
   #   environment:
-  #     DB_URL: jdbc:postgresql://postgres:5432/keycloakdb  # Same URL
-  #     DB_USERNAME: ${POSTGRES_USER}
-  #     DB_PASSWORD: ${POSTGRES_PASSWORD}
+  #     PGADMIN_DEFAULT_EMAIL: admin@admin.com  # Admin email for pgAdmin
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}       # Admin password for pgAdmin
   #   ports:
-  #     - "8081:8081"  # Expose a different port for this service
+  #     - "8081:80"                             # Access pgAdmin on port 8081
+  #   depends_on:
+  #     - postgres
+
+  gateway:
+    build:
+      context: ./gateway
+      dockerfile: Dockerfile  # Path to your service's Dockerfile
+    environment:
+      DB_URL: jdbc:postgresql://postgres:5432/keycloakdb  # Same URL
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      REALM_NAME: ${REALM_NAME}
+      KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}
+      KEYCLOAK_CLIENT_SECRET: ${KEYCLOAK_CLIENT_SECRET}
+      KEYCLOAK_REALM_ADMIN_PASSWORD: ${KEYCLOAK_REALM_ADMIN_PASSWORD}
+
+    ports:
+      - "8082:8082"  # Expose a different port for this service
 
 volumes:
   postgres_data:  # Named volume for persistent PostgreSQL storage
