--- a/Backend/gateway/src/main/resources/application.yml
+++ b/Backend/gateway/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/${REALM_NAME}
+          issuer-uri: http://keycloak:8080/realms/${REALM_NAME}
